--- a/peakrdl/python/templates/addrmap.py.jinja
+++ b/peakrdl/python/templates/addrmap.py.jinja
@@ -470,4 +470,15 @@ class {{get_fully_qualified_enum_type(enum_needed, top_node.parent)}}_enumcls(In
 
 
 if __name__ == '__main__':
-    {{get_inst_name(top_node)}} = {{get_fully_qualified_type_name(top_node)}}_cls()
+    # dummy functions to demonstrate the class
+    def read_addr_space(addr: int):
+        assert isinstance(addr, int)
+        return input('value to read from address:0x%X'%addr)
+
+    def write_addr_space(addr: int, data: int):
+        assert isinstance(addr, int)
+        assert isinstance(data, int)
+        print('write data:0x%X to address:0x%X'%(data, addr))
+
+    # create an instance of the class
+    {{get_inst_name(top_node)}} = {{get_fully_qualified_type_name(top_node)}}_cls(read_callback=read_addr_space, write_callback=write_addr_space)
