--- a/tests/testcases/simple.rdl
+++ b/tests/testcases/simple.rdl
@@ -1,8 +1,15 @@
 addrmap simple {
 
+    enum value_field {
+			value1 = 0;
+			value2 = 14;
+			value3 = 10;
+		};
+
     reg {
         default sw = rw;
         default hw = r;
-        field {} field_a[31:0];
-    } reg_a;
+        field {} simple_field_a[15:0];
+        field { encode = value_field; fieldwidth=4; } simple_field_b;
+    } simple_reg_a;
 };
